--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <header>
   <h1 class="header" id="header">Weather for</h1>
   <p class="coords" id="coords"></p>
+  <div class="loader-container"><div class="loader"></div></div>
+  
   <div class="search" id="search">
     <h4>Search different coordinates?</h4>
     <input type="text" id="latInput">
