hook up inputs and buttons. refactor main function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
   <h1 class="header" id="header">Weather for</h1>
   <p class="coords" id="coords"></p>
-  <div class="loader-container"><div class="loader"></div></div>
+  <div class="loader-container"><div class="loader" id="loader"></div></div>
   
   <div class="search" id="search">
     <h4>Search different coordinates?</h4>
@@ -23,7 +23,7 @@
     <label for="latInput">Latitude</label>
     <input type="text" id="lonInput">
     <label for="lonInput">Longitude</label>
-    <button>Submit</button>
+    <button id="button">Submit</button>
   </div>
 </header>
 
