integrate geocoding api server hosted on render.com

--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
   <div class="loader-container"><div class="loader" id="loader"></div></div>
   
   <div class="search" id="search">
-    <h4>Search different coordinates?</h4>
-    <input type="text" id="latInput">
-    <label for="latInput">Latitude</label>
-    <input type="text" id="lonInput">
-    <label for="lonInput">Longitude</label>
+    <h4>Search different location?</h4>
+    <input type="text" id="address" placeholder="e.g. Boston, MA">
+    <label for="address">City, State</label>
     <button id="button">Submit</button>
   </div>
 </header>
